First commit: add project

--- a/config/local.yaml
+++ b/config/local.yaml
@@ -1,6 +1,8 @@
   env: "local" # local, dev, prod
-  storage_path: "./storage/storage.db"
+  db_url: "postgres://postgres:Zaurbek@localhost:5434/mydb?sslmode=disable"
   http_server:
-    address: "localhost:8082"
+    address: "localhost:8080"
     timeout: 4s
     idle_timeout: 60s
+    user: "myuser"
+    password: "mypass"
